--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.33",
+    "prisma": "^3.14.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.14.0",
+    "@types/express": "^4.17.13",
+    "express": "^4.18.1"
   }
 }
